# BER

./: .gitignore  CMakeLists.txt  README.md  TcpClient.cpp  TcpServer.cpp  ld_library_path.sh
include/: BER.hpp  IO.hpp  Singleton.hpp  functions.hpp  header.hpp  test.hpp
poco/: CMakeLists.txt
src/: BER.cpp  Client.cpp  IO.cpp  Server.cpp  TcpClient.cpp  TcpServer.cpp  send_and_receiveData.cpp
